[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/ChooseServer.gd" type="Script" id=1]
[ext_resource path="res://resources/images/Background.svg" type="Texture" id=2]
[ext_resource path="res://resources/fonts/gomarice_no_continue.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=7]
size = 60
outline_size = 3
outline_color = Color( 0.333333, 0.329412, 0.164706, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 90
outline_size = 3
outline_color = Color( 0.341176, 0.133333, 0.133333, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 3
outline_color = Color( 0.333333, 0.329412, 0.164706, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
draw_center = false

[node name="ChooseServer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 1.12, 1 )
texture = ExtResource( 2 )

[node name="DarkBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.639216 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MenuBackground" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -768.0
margin_top = -432.0
margin_right = 768.0
margin_bottom = 432.0
color = Color( 0.160784, 0.152941, 0.152941, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="MenuBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 100.0
margin_right = -50.0
margin_bottom = -100.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBackground/MarginContainer"]
margin_right = 1436.0
margin_bottom = 664.0
custom_constants/separation = 50

[node name="InfoLable" type="Label" parent="MenuBackground/MarginContainer/VBoxContainer"]
margin_right = 1436.0
margin_bottom = 61.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 0.964706, 0.333333, 1 )
custom_fonts/font = SubResource( 7 )
text = "Enter Address:"
align = 1

[node name="AddressField" type="LineEdit" parent="MenuBackground/MarginContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 1436.0
margin_bottom = 212.0
custom_colors/font_color_selected = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_fonts/font = SubResource( 6 )
text = "granatier.soulthieves.tk"
align = 1
max_length = 30
clear_button_enabled = true
placeholder_text = "Server Address"
caret_blink = true
caret_blink_speed = 0.5

[node name="ConnectButton" type="Button" parent="MenuBackground/MarginContainer/VBoxContainer"]
margin_left = 578.0
margin_top = 262.0
margin_right = 858.0
margin_bottom = 343.0
grow_horizontal = 2
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 0.964706, 0.333333, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0
text = "Connect"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="pressed" from="MenuBackground/MarginContainer/VBoxContainer/ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
